@@ -13,6 +13,7 @@ RemoteLaunchDelegate_error_no_fs=FileSystem service is unavailable on target.
 RemoteLaunchDelegate_error_no_host=No available RSE host has been selected.
 RemoteLaunchDelegate_error_no_proc=Processes service is unavailable on target.
 RemoteLaunchDelegate_error_no_streams=Streams service is unavailable on target.
+RemoteLaunchDelegate_error_interrupted=RSE initialization interrupted.
 RemoteLaunchDelegate_task_name=Profiling Remote C/C++ Application
 RemoteProcess_error_proc_not_term=Process has not terminated.
 RemoteTab_error_dest_wd=Please specify destination/working directory.
